--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-ng-ts",
   "version": "0.1.0",
-  "description": "Yeoman generator",
+  "description": "A Yeoman generator for Angular 1.x TypeScript projects.",
   "license": "MIT",
   "main": "app/index.js",
   "repository": "olohmann/generator-ng-ts",
